--- a/data.html
+++ b/data.html
@@ -4,15 +4,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Data Page</title>
-  <link rel="stylesheet" href="styleg.css">
+  <link rel="stylesheet" href="styles/styleg.css">
 </head>
 <body>
   <a href="index.html">
     <button class="btn">Voltar</button>
   </a>
-  <a href="index.html">
-    <button class="invisible">8</button>
-  </a>
+  <noscript>
+    <a href="index.html">
+      <button class="invisible">8</button>
+    </a>
+  </noscript>
   <div class="grid">
     <div id="documentos" class="box">
       <a href="index.html">
@@ -114,6 +116,6 @@
         <p>Armazenamento</p></a>
     </div>
   </div>
-  <footer>Em desenvolvimento. 2023 <a href="index.html" class="nodec" style="color: blue;">Walter Menezes</a></footer>
+  <footer>Em desenvolvimento. 2023 <a href="" class="nodec" style="color: blue;">Walter Menezes</a></footer>
 </body>
 </html>
