--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DIGIT</title>
-    <link rel="stylesheet" href="styleg.css">
+    <link rel="stylesheet" href="styles/styleg.css">
 </head>
 <body>
     <div class="container">
